@@ -41,6 +41,7 @@ extern gE_window *gE_window_new();
 extern gE_document *gE_document_new(gE_window *window);
 extern gE_document *gE_document_current(gE_window *window);
 extern void gE_document_set_word_wrap (gE_document *doc, gint word_wrap);
+extern void gE_document_set_line_wrap (gE_document *doc, gint line_wrap);
 extern void gE_document_set_read_only (gE_document *doc, gint read_only);
 #ifndef WITHOUT_GNOME
 extern void gE_document_set_scroll_ball (gE_document *doc, gint scroll_ball);
