@@ -1,3 +1,11 @@
+1998-10-18  Martin Baulig  <martin@home-of-linux.org>
+
+	Added option to toggle line wrapping in the Text Widget.
+	
+	* src/main.h (gE_document): Added `line_wrap'.
+	* src/gE_document.c (gE_document_set_line_wrap): New function.
+	* src/gE_plugin_api.h (gE_plugin_set_line_wrap): New function.
+
 1998-10-15  Alex Roberts  <bse@dial.pipex.com>
 
 	* gE_prefs.c:
